# SADDLE-POINT-RECRUITMENT-FOR-KNOWLEDGE-DISTILLATION

./: .gitignore  CHANGELOG.md  CIFAR_100_ENSEMBLE_TEACHER_SADDLE_POINTS.pth  CITATION.cff  CNN_CIFAR_100_ENSEMBLE_TEACHER_SADDLE_POINTS.pth  CONTROL_10_PYHESSIAN_EIGS.pth  ENSEMBLE_TEACHER_SADDLE_POINTS.pth  LICENSE  MAGN_MALARIA_ENSEMBLE_TEACHER_SADDLE_POINTS.pth  MALARIA_ENSEMBLE_TEACHER_SADDLE_POINTS.pth  MALARIA_MLP_ENSEMBLE_TEACHER_SADDLE_POINTS.pth  QUANT_MALARIA_ENSEMBLE_TEACHER_SADDLE_POINTS.pth  README.md  SPRKD.ipynb  SPRKD_10_PYHESSIAN_EIGS.pth  TESTSET.pth  TOP2_MALARIA_ENSEMBLE_TEACHER_SADDLE_POINTS.pth  TRUE_MALARIA_ENSEMBLE_TEACHER_SADDLE_POINTS.pth  TRUE_TEACHER_1_MALARIA.pth  pyproject.toml
METRICS/HESSIAN EIGENSPECTRA/: EIGS_500_CONTROL_MALARIA.pth  EIGS_500_PD_SPRKD_MALARIA.pth  EIGS_500_SPRKD_MALARIA.pth  EIGS_50_PGD_SPRKD_MALARIA.pth  EIGS_APPROXIMATED_SADDLE_REGION_TEACHER_1_MALARIA.pth  EIGS_CONTROL_MALARIA.pth  EIGS_DEC2_NEGHESS_10_SPRKD_MALARIA.pth  EIGS_DEC_NEGHESS_10_SPRKD_MALARIA.pth  EIGS_RKD_MALARIA_STUDENT.pth  EIGS_SPRKD_MALARIA.pth  SPRKD_10_PYHESSIAN_EIGS.pth
METRICS/HESSIAN EIGENSPECTRA/LANCZOS + HESSIAN EIGENTHINGS EIGENSPECTRA/: EIGS_500_CONTROL_MALARIA.pth  EIGS_500_PD_SPRKD_MALARIA.pth  EIGS_500_SPRKD_MALARIA.pth  EIGS_CONTROL_MALARIA.pth  EIGS_RKD_MALARIA_STUDENT.pth  EIGS_SPRKD_MALARIA.pth
METRICS/HESSIAN EIGENSPECTRA/LANCZOS + HESSIAN EIGENTHINGS EIGENSPECTRA/500_SPRKD_HESSIAN_EIGENVALUES_VECS/: data.pkl
METRICS/HESSIAN EIGENSPECTRA/LANCZOS + HESSIAN EIGENTHINGS EIGENSPECTRA/500_SPRKD_HESSIAN_EIGENVALUES_VECS/data/: 0  1
METRICS/HESSIAN EIGENSPECTRA/LANCZOS + HESSIAN EIGENTHINGS EIGENSPECTRA/500_SPRKD_HESSIAN_POWERITER_EIGENVALUES_VECS/: data.pkl
METRICS/LOSSES AND ACCURACIES/: CONTROL_STUDENT_LOSSES  DEC2_NEGHESS_10_SPRKD_LOSSES.pkl  DEC_NEGHESS_10_SPRKD_LOSSES.pkl  LOW_DEC_NEGHESS_10_SPRKD_LOSSES.pkl  NEGHESS_10_SPRKD_LOSSES.pkl  NEGHESS_GRAD_10_SPRKD_LOSSES.pkl  PGD_GAUSS_10_SPRKD_LOSSES.pkl  RKD_STUDENT_METRICS.pkl  SPRKD_LOSSES  SPRKD_LOSSES.pkl
MODELS/: 50_PGD_SPRKD_MALARIA.pth  APPROXIMATED_SADDLE_REGION_TEACHER_1_MALARIA.pth  CONTROL_MALARIA.pth  DEC2_NEGHESS_10_SPRKD_MALARIA.pth  DEC_NEGHESS_10_SPRKD_MALARIA.pth  LOW_DEC_NEGHESS_10_SPRKD_MALARIA.pth  NEGHESS_10_SPRKD_MALARIA.pth  NEGHESS_GRAD_10_SPRKD_MALARIA.pth  NEGHESS_NPGD_GRAD_10_SPRKD_MALARIA.pth  PGD_GAUSS_10_SPRKD_MALARIA.pth  PGD_RAND_10_SPRKD_MALARIA.pth  RKD_MALARIA_STUDENT.pth  SPRKD_MALARIA.pth  TEACHER_1_MALARIA.pth  TOP2_APPROXIMATED_SADDLE_REGION_TEACHER_1_MALARIA.pth  TOP2_TEACHER_1_MALARIA.pth
docs/: ALGORITHM.md  arxiv_metadata.txt  sprkd_paper.tex
examples/: quickstart.py
notebooks/: README.md  SPRKD.ipynb  SPRKD_data_analysis.ipynb  SPRKD_data_analysis_executed.ipynb  SPRKD_quickstart.ipynb  SPRKD_quickstart_executed.ipynb
scripts/: README.md  compare_released_models.py  eval_released_student.py  reproduce_malaria.py
sprkd/: __init__.py  analysis.py  architectures.py  cli.py  data.py  eval.py  landscape.py  legacy.py  models.py  optimizer.py  saddle.py  stats.py  tli.py  training.py  utils.py  visualize.py
tests/: conftest.py  test_analysis.py  test_architectures.py  test_checkpoints.py  test_cli.py  test_data.py  test_eval.py  test_imports.py  test_integration.py  test_landscape.py  test_legacy.py  test_models.py  test_optimizer.py  test_paper.py  test_performance.py  test_saddle.py  test_stats.py  test_tli.py  test_training.py  test_utils.py  test_visualize.py
(+2 files in other folders)
