[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sprkd"
version = "0.1.0"
description = "SPRKD: Saddle Point Recruitment for Knowledge Distillation - second-order, landscape-aware knowledge distillation for deep neural networks."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Aditya Dewan",      email = "adewan2@andrew.cmu.edu" },
    { name = "Arjun Yogeswaran",  email = "arjuny@waymo.com" },
    { name = "Benjamin Fedoruk",  email = "benjamin.fedoruk@ontariotechu.net" },
]
keywords = [
    "knowledge-distillation",
    "saddle-points",
    "hessian",
    "loss-landscape",
    "deep-learning",
    "model-compression",
    "second-order-optimization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.21,<3",
    "scipy>=1.9",
    "matplotlib>=3.5",
    "scikit-learn>=1.0",
    "Pillow>=9.0",
    "h5py>=3.6",
    "tqdm>=4.60",
    "pyhessian>=0.1",
]

[project.optional-dependencies]
fastai = ["fastai>=2.7"]
stats  = ["statsmodels>=0.13"]
tli-full = [
    "networkx>=2.8",
    "graphviz>=0.20",
    "karateclub>=1.3",
    "timm>=0.6",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ipython>=8.0",
    "jupyter>=1.0",
    "nbconvert>=7.0",
    "statsmodels>=0.13",
]
# Pinned forks required to execute the unmodified ISEF 2023 notebook
# (notebooks/SPRKD.ipynb). Not required for any package functionality.
legacy = [
    "fastai>=2.7",
    "hessian-eigenthings @ git+https://github.com/thetechdude124/pytorch-hessian-eigenthings.git@master",
]
all = [
    "sprkd[fastai,stats,tli-full,dev]",
]

[project.urls]
Homepage      = "https://github.com/thetechdude124/SADDLE-POINT-RECRUITMENT-FOR-KNOWLEDGE-DISTILLATION"
Repository    = "https://github.com/thetechdude124/SADDLE-POINT-RECRUITMENT-FOR-KNOWLEDGE-DISTILLATION"
"Bug Tracker" = "https://github.com/thetechdude124/SADDLE-POINT-RECRUITMENT-FOR-KNOWLEDGE-DISTILLATION/issues"

[project.scripts]
sprkd = "sprkd.cli:main"

[tool.setuptools.packages.find]
include = ["sprkd*"]
exclude = ["tests*", "scripts*", "examples*", "notebooks*", "docs*"]

[tool.setuptools.package-data]
sprkd = ["py.typed"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: tests that exercise full training loops or large checkpoints",
    "integration: end-to-end pipeline tests",
    "checkpoints: tests that load saved .pth artifacts shipped with the repo",
    "paper: correctness checks against sprkd.tex and bundled paper artifacts",
    "performance: lightweight timing / throughput smoke tests (not benchmarks)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
]
